assets/scss/components/_all.scss
body.expressbar-enabled {
  position: relative;
  top: 0;
  transition: top 0.5s;

  &.expressbar-open {
    top: 40px;

    #expressbar {
      top: 0 !important;
    }
  }
}

body {
  &.expressbar-enabled.admin-bar {
    #wpadminbar {
      transition: top 0.5s;
    }

    &.expressbar-open #wpadminbar {
      top: 40px;
    }
  }

  &.exb-cover-page.expressbar-open #expressbar {
    top: 0 !important;
  }

  &.exb-allow-close {
    .exb-close {
      background-color: transparent;
      color: transparent;
      transition: color 0.5s 0.3s;
    }

    &.expressbar-open .exb-close {
      color: #fff;
    }
  }
}

@media (max-width: 599px) {
  body.expressbar-enabled.admin-bar #wpadminbar {
    top: -46px !important;
  }
}

#expressbar {
  background: #3B3B4F;
  position: fixed;
  left: 0;
  top: -43px;
  width: 100%;
  color: #fff;
  z-index: -1;
  padding: 5px 50px;
  text-align: center;
  border-bottom: 3px solid #fff;
  font-size: 16px;
  line-height: 30px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  box-sizing: border-box;
  transition: 0.5s;
}

.expressbar-open #expressbar {
  z-index: 999999;
}

.exb-tracked {
  transition: top 0.5s !important;
}

#expressbar {
  .hide {
    display: none;
  }

  &.remain-top {
    position: absolute;
  }

  a {
    color: #fff;
    display: inline-block;
    text-decoration: underline;
  }
}

.exb-button {
  background: #333;
  border-radius: 50px;
  padding: 0 20px;
  margin: 0 10px;
  text-decoration: none !important;
}

.exb-content,
.exbcd-content {
  display: inline-block;
}

@media (max-width: 767px) {

  .exb-content,
  .exbcd-content {
    display: block;
  }
}

.exb-inner {
  margin: 0 auto;
  overflow: hidden;
}

.exb-counter {
  display: inline-block;
  color: #fff;
  vertical-align: bottom;
  margin-right: 10px;

  .countDays,
  .countHours,
  .countMinutes,
  .countSeconds {
    display: block;
    float: left;
    position: relative;
    text-align: center;
    background: rgba(255, 255, 255, 0.2);
    border-radius: 2px;
    padding: 7px 5px;
  }

  .countDays .position,
  .countHours .position,
  .countMinutes .position,
  .countSeconds .position {
    overflow: hidden;
    display: inline-block;
    position: relative;
    z-index: 1;
    line-height: 1;
    float: left;
  }

  .countDays .digit,
  .countHours .digit,
  .countMinutes .digit,
  .countSeconds .digit {
    opacity: 1 !important;
    text-align: center;
    margin-left: 1px;
  }

  .countDays .digit:first-child+.digit,
  .countHours .digit:first-child+.digit,
  .countMinutes .digit:first-child+.digit,
  .countSeconds .digit:first-child+.digit {
    display: none;
  }

  .countDays .digit.static,
  .countHours .digit.static,
  .countMinutes .digit.static,
  .countSeconds .digit.static {
    display: block;
  }

  .countDays .boxName,
  .countHours .boxName,
  .countMinutes .boxName,
  .countSeconds .boxName {
    display: inline-block;
    margin-left: 1px;
    position: relative;
    z-index: 1;
    float: left;
    line-height: 1;
  }

  .countDays,
  .countHours,
  .countMinutes {
    margin-right: 2px;
  }
}

.exb-action,
.exb-close {
  position: fixed;
  background: #3B3B4F;
  right: 10px;
  top: 0;
  text-align: center;
  height: 30px;
  width: 30px;
  border-radius: 0 0 2px 2px;
  z-index: 999999;
  cursor: pointer;
  color: #fff;
  transition: 0.5s;
}

.exb-action:before,
.exb-close:before {
  font-size: 18px;
  line-height: 30px;
  font-family: "dashicons";
  content: "\f347";
}

.expressbar-open {

  .exb-action,
  .exb-close {
    top: 5px;
    border-radius: 50%;
    background: transparent !important;
  }

  .exb-action:before,
  .exb-close:before {
    content: '\f343';
  }
}

.exb-remain-top {

  .exb-action,
  .exb-close {
    position: absolute;
  }
}

.exb-close:before {
  content: "\f335" !important;
}

@media (max-width: 767px) {
  .exb_responsive_extra_small {
    &.expressbar-enabled {
      top: 0 !important;

      #wpadminbar {
        top: 0 !important;
      }
    }

    #expressbar,
    .exb-action,
    .exb-close {
      display: none !important;
    }
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .exb_responsive_small {
    &.expressbar-enabled {
      top: 0 !important;

      #wpadminbar {
        top: 0 !important;
      }
    }

    #expressbar,
    .exb-action,
    .exb-close {
      display: none !important;
    }
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  .exb_responsive_medium {
    &.expressbar-enabled {
      top: 0 !important;

      #wpadminbar {
        top: 0 !important;
      }
    }

    #expressbar,
    .exb-action,
    .exb-close {
      display: none !important;
    }
  }
}

@media (min-width: 1200px) {
  .exb_responsive_large {
    &.expressbar-enabled {
      top: 0 !important;

      #wpadminbar {
        top: 0 !important;
      }
    }

    #expressbar,
    .exb-action,
    .exb-close {
      display: none !important;
    }
  }
}

